# volmdlr

./: .coveragerc  .drone.yml  .gitattributes  .gitignore  .pep8  .pre-commit-config.yaml  .pyenchant_dessia.dict  .pylintrc  .readthedocs.yaml  .woodpecker.yml  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  ROADMAP.md  code_black.sh  code_changelog.sh  code_pep8.sh  code_pydocstyle.py  code_pylint.py  code_quality.py  code_quality.sh  coverage.py  coverage_script.py  package.xml  pre-commit  pre-push  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  install.yml  test-build.yml  test.yml
doc/: Makefile  make.bat
doc/source/: about_dessia.rst  about_the_package.rst  authors.rst  boolean_operations.rst  conf.py  core.rst  dealing_with_step.rst  dealing_with_stl.rst  dev.rst  distances.rst  edges.rst  faces.rst  getting_started.rst  glossary.rst  how-tos.rst  index.rst  intersections.rst  intro.rst  modules.rst  primitive2D.rst  primitive3D.rst  reference.rst  road_map_and_current_limitations.rst  tutorials.rst  usage.rst  useful_operations.rst  user_guide.rst  volmdlr.rst  volmdlr.utils.rst  wires.rst
scripts/: Mesher.py  Points.py  _reexport.step  arcs.py  arcs2D.py  arcs3D.py  areas.py  babylon_extrusion.py  block.step  block.step_reexport.step  block3d.py  bspline_curves.py  casing.py  casing.step  casing.stl  center_mass.py  ci_scripts.py  coverage.py  curves_babylonjs.py  cut.py  cylindrical_face_test.py  demo2D.py  demo_primitives1.py  distance_2_points_on_bbox.py  electric_machine_script.py  extrusion.py  extrusion2.py  extrusion3.py  faces_with_inner_contours.py  gear.py  geometry.py  grid.py  line_test.py  mesh2D.geo  mesh2D.py  minimum_distance_points_line3D.py  minimum_distance_points_line3D_2.py  offset_wire_script.py  polygon2D.py  polygon2D_2.py  (+18 more)
scripts/Canvas_tests/: Graph.py  Points.py  (+1 more)
tests/: ci_unittests.py  core.py  geometry.py  line_distances_projections.py  test_bounding_rectangle.py  test_cloud.py  test_core.py  test_from_ocp.py  test_geometry.py  test_simple_loft.py
tutorials/: ci_tutorials.py  tutorial_casing.ipynb  tutorial_casing.py
volmdlr/: __init__.py  bspline_compiled.c  bspline_compiled.pyx  bspline_evaluators.pyx  bspline_fitting.pyx  cad_simplification.py  cloud.py  code_aster.py  composite_shapes.py  core.py  core_compiled.c  core_compiled.pxd  core_compiled.pyx  curves.py  discrete.py  discrete_representation.py  discrete_representation_compiled.py  display.py  display_mesh.py  edges.py  faces.py  faces3d.py  from_occt.py  from_ocp.py  geometry.py  gmsh.py  gmsh_vm.py  grid.py  mesh.py  model.py  ocaf.py  plot_data.py  primitives.py  primitives2D.py  primitives2d.py  primitives3D.py  primitives3d.py  shapes.py  shells.py  simplification.py  (+19 more)
(+932 files in other folders)
