[build-system]
requires = ["setuptools", "Cython>=3", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Skip building on CPython 3.12 on all platforms. remove in the future
# Skip building PyPy wheels on python3.10 on windowns amd 64 bits. Causing numpy error.
skip = ["cp312-*", "pp310-win_amd64"]
